# ApriltagLib

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/taylorz/apriltaglib/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
apriltag/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
apriltag/src/main/java/com/taylorz/apriltag/: ApriltagDetection.kt  ApriltagNative.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
